<resources>
    <string name="app_name">GUI</string>

    <string name="app_name_merriam_wd">Merriam Webster dictionary</string>
    <string name="app_name_news_feed">News feed</string>
    <string name="app_name_flight">Flight status tracker</string>
    <string name="app_name_ny_times">New york times article search</string>

    <string name="merri_hint_search">Enter word to begin search…</string>
    <string name="merri_input_err">Please enter a word to make a search!</string>

    <string name="btn_text_search">Search</string>
    <string name="btn_text_saved">Saved</string>

    <string name="save">Save offline</string>
    <string name="remove">Remove offline</string>

    <string name="merriam_message_wait">Please wait…</string>
    <string name="merriam_msg_saved">Word data saved offline!</string>
    <string name="merriam_msg_removed">Word data removed from offline!</string>
    <string name="merriam_pronun">Pronunciation:</string>
    <string name="merriam_definition_s">Definition(s)</string>
    <string name="merri_help">To search information about a word,
        click on Search button and enter the word to be searched. You will get a list of related words.
        \nClick on particular word to view detailed information.
    \n\nYou can save the word details offline on the detail page, click on Save offline button to do so.
        \n\nTo view saved words click on Saved button, the list of saved words will be displayed, click on particular word to view it\'s detailed information.
    </string>
    <string name="merri_information">Information</string>
    <string name="merri_author_name">Author name:</string>
    <string name="merri_version_no">Version no.:</string>
    <string name="merri_how_to_use">How to use</string>
    <string name="dismiss">Dismiss</string>
    <string name="mnuhelp">Help</string>


    <string name="nf_sugg_enter_keyword">Please enter topic name to get results!</string>

    <string name="nf_author">Author:</string>
    <string name="nf_published">Published:</string>
    <string name="nf_detail_story">Detail Story</string>
    <string name="nf_language">Language:</string>
    <string name="nf_view_link">View Link</string>

    <string name="nf_save">Save offline</string>
    <string name="nf_remove">Remove offline</string>

    <string name="nf_last_searched">Last searched:</string>

    <string name="nf_type_a_topic_name_to_view_articles">Type a topic name to view articles…</string>

    <string name="nf_help">To search for a news,
        click on Search button and enter the keyword. You will get a list of related news articles.
        \nClick on particular article to view detailed information.
    \n\nYou can save the article details offline on the detail page, click on Save offline button to do so.
        \n\nTo view saved articles click on Saved button, the list of saved articles will be displayed, click on particular article to view it\'s detailed information.
    </string>

    <string name="nf_removed_snck">News article removed from offline!</string>
    <string name="nf_saved_snck">News article saved offline!</string>
    <string name="nf_please_wait">Please wait…fetching news!</string>

    <string name="flight_sugg_enter_keyword">Please enter airport code to get results!</string>
    <string name="flight_sugg_select_type">Please select type to get results!</string>
    <string name="flight_save">Save offline</string>
    <string name="flight_remove">Remove offline</string>
    <string name="hint_enter_airport_code">Enter airport code…</string>
    <string name="flight_no">Flight no.</string>
    <string name="flight_iata_no">Flight IATA No.</string>
    <string name="flight_arrival_iatacode">arrival iataCode</string>
    <string name="flight_departure_iatacode">departure iataCode</string>
    <string name="flight_status">status</string>

    <string name="flight_please_wait">Please wait…</string>
    <string name="flight">flight</string>
    <string name="flight_iata_number">IATA Number:</string>
    <string name="flight_icao_number">ICAO Number:</string>
    <string name="flight_number">number:</string>
    <string name="flight_status_detail">status:</string>
    <string name="flight_geography">geography</string>
    <string name="flight_latitude">latitude:</string>
    <string name="flight_longitude">longitude:</string>
    <string name="flight_altitude">altitude:</string>
    <string name="flight_direction">direction:</string>
    <string name="flight_speed">speed</string>
    <string name="flight_horizontal">horizontal:</string>
    <string name="flight_departure">departure</string>
    <string name="flight_iata_code">IATA Code:</string>
    <string name="flight_arrival">arrival</string>

    <string name="flight_snck_saved">Flight detail saved offline!</string>
    <string name="flight_snck_removed">Flight detail removed offline!</string>

    <string name="flight_help">To search for flight, click on Search button and enter airport code and select the
    direction type (arrival or departure).
    \nYou will get a list of flight with details.
    \nClick on particular flight to view its tracking details.
    \n\nYou can save this information offline from the detail screen, by tapping the Save offline button.
    \n\nTo view offline saved flight details tap on Saved button.</string>

    <string-array name="flight_type">
        <item>Select type</item>
        <item>Arrival</item>
        <item>Departure</item>
    </string-array>

    <string name="ny_sugg_enter">Please enter topic name to get results…</string>

    <string name="ny_save">Save offline</string>
    <string name="ny_remove">Remove offline</string>

    <string name="ny_snk_msg_removed">News removed from offline!</string>
    <string name="ny_snk_msg_saved">News saved offline!!</string>
    <string name="ny_type">Type:</string>
    <string name="ny_published_on">Published on:</string>
    <string name="ny_source">Source:</string>
    <string name="ny_lead_paragraph">Lead paragraph:</string>
    <string name="ny_view_link">View link</string>
    <string name="ny_save_btn">SAVE</string>

    <string name="ny_please_wait">Please wait…</string>
    <string name="ny_help">To search for a news,
        click on Search button and enter the topic. You will get a list of related news articles.
        \nClick on particular article to view detailed information.
    \n\nYou can save the article details offline on the detail page, click on Save offline button to do so.
        \n\nTo view saved articles click on Saved button, the list of saved articles will be displayed, click on particular article to view it\'s detailed information.</string>
    <string name="ny_document_type">Document type:</string>

</resources>
